Fixed gap in dropdown

--- a/app/main.css
+++ b/app/main.css
@@ -189,7 +189,7 @@ button,
     background-color: var(--primary-color);
     color: var(--secondary-color);
     min-width: 160px;
-    top: 50px;
+    padding-top: 20px;
     z-index: 1;
   }
 
